--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -1,3 +1,17 @@
+<link rel="stylesheet" href="/css/header.css">
 <header>
-    Header Session
+    <div class="nav_bar">
+        <div class="nav_brand">
+            Chat Engine
+        </div>
+        <div class="nav_user">
+            <!-- <button class="nav_button">Sign In</button>
+            <button class="nav_button">Sign Up</button> -->
+            <div class="nav_user_data">
+                <img src="/images/image.jpg" alt="" class="nav_user_image">
+                <div class="nav_user_username">Tom Jose</div>
+                <div class="nav_button"><i class="fa-solid fa-moon fa-lg" style="color: #005eff;"></i></div>
+            </div>
+        </div>
+    </div>
 </header>
