--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -1,9 +1,32 @@
+.nav_main {
+  width: 70%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between; }
+
+.nav_btn {
+  background-color: #ffffff;
+  padding: 0.8rem;
+  border-radius: 0.6rem;
+  cursor: pointer;
+  font-weight: 500;
+  border: 0.1rem solid #007fff; }
+
+.nav_btn:hover {
+  background-color: #007fff;
+  color: #ffffff !important;
+  padding: 0.8rem;
+  border-radius: 0.6rem;
+  cursor: pointer;
+  font-weight: 500;
+  border: 0.1rem solid #007fff; }
+
 .nav_bar {
   width: 100%;
   padding: 1rem 2rem;
   display: flex;
   align-items: center;
-  justify-content: space-between; }
+  justify-content: center; }
 
 .nav_brand {
   font-size: 1.4rem;
@@ -17,21 +40,26 @@
   padding: 0.8rem;
   border-radius: 0.6rem;
   cursor: pointer;
-  font-weight: 500; }
+  font-weight: 500;
+  margin: 0 0.5rem; }
 
 .nav_button:hover {
   background-color: #0060c1; }
 
-.nav_user_data {
-  display: flex;
-  align-items: center; }
+.nav_user {
+  display: flex; }
+  .nav_user_data {
+    display: flex;
+    align-items: center; }
+  .nav_user_image {
+    width: 3rem;
+    border-radius: 0.5rem;
+    padding: 0 0.2rem; }
+  .nav_user_username {
+    color: #007fff;
+    font-weight: 500;
+    padding: 0 0.2rem; }
 
-.nav_user_image {
-  width: 3rem;
-  border-radius: 0.5rem;
-  padding: 0 0.2rem; }
-
-.nav_user_username {
-  color: #007fff;
-  font-weight: 500;
-  padding: 0 0.2rem; }
+.nav_btn:hover .fa-sun,
+.nav_btn:hover .fa-moon {
+  color: #ffffff !important; }
