--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -1,34 +1,61 @@
-$main-bg: #007fff;
+$main-color: #007fff;
 $btn-text: #ffffff;
 $btn-hover: #0060c1;
+$main-bg: #f1f4f7;
 $navbar-shadow: #e7ebf0;
 .nav {
+  &_main {
+    width: 70%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  &_btn {
+    background-color: $btn-text;
+    padding: 0.8rem;
+    border-radius: 0.6rem;
+    cursor: pointer;
+    font-weight: 500;
+    border: 0.1rem solid $main-color;
+  }
+
+  &_btn:hover {
+    background-color: $main-color;
+    color: $btn-text !important;
+    padding: 0.8rem;
+    border-radius: 0.6rem;
+    cursor: pointer;
+    font-weight: 500;
+    border: 0.1rem solid $main-color;
+  }
   &_bar {
     width: 100%;
     padding: 1rem 2rem;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
   }
 
   &_brand {
     font-size: 1.4rem;
     font-weight: bold;
-    color: $main-bg;
+    color: $main-color;
   }
   &_button {
-    background-color: $main-bg;
+    background-color: $main-color;
     color: $btn-text;
     border: none;
     padding: 0.8rem;
     border-radius: 0.6rem;
     cursor: pointer;
     font-weight: 500;
+    margin: 0 0.5rem;
   }
   &_button:hover {
     background-color: $btn-hover;
   }
   &_user {
+    display: flex;
     &_data {
       display: flex;
       align-items: center;
@@ -39,9 +66,14 @@ $navbar-shadow: #e7ebf0;
       padding: 0 0.2rem;
     }
     &_username {
-      color: $main-bg;
+      color: $main-color;
       font-weight: 500;
       padding: 0 0.2rem;
     }
   }
+}
+
+.nav_btn:hover .fa-sun,
+.nav_btn:hover .fa-moon {
+  color: $btn-text !important;
 }
