--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -10,6 +10,7 @@
     </title>
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/header.css">
+    <link rel="stylesheet" href="/css/chat.css">
     <script src="https://kit.fontawesome.com/2a8c99c489.js" crossorigin="anonymous"></script>
 
 </head>
