--- a/views/_footer.ejs
+++ b/views/_footer.ejs
@@ -1,3 +1,5 @@
 <footer>
-    Footer Session
+    <p>Copyright &copy;
+        <script>document.write(new Date().getFullYear())</script> ChatZip.com Rights Reserved
+    </p>
 </footer>
