--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -2,14 +2,17 @@
 <header>
     <div class="nav_bar">
         <div class="nav_main">
-            <div class="nav_brand">
-                Chat Engine
-            </div>
+            <a href="/">
+                <div class="nav_brand">
+                    ChatZip
+                </div>
+            </a>
             <div class="nav_user">
-                <button class="nav_button">Sign In</button>
-                <!-- <button class="nav_button">Sign Out</button> -->
-                <div class="nav_btn"><i class="fa-solid fa-moon fa-lg" style="color: #005eff;"></i></div>
-                <!-- <div class="nav_btn"><i class="fa-regular fa-sun fa-lg" style="color: #005eff;"></i></div> -->
+                <!-- <button class="nav_button">Sign In</button> -->
+                <button class="nav_button">Sign Out</button>
+                <!-- <div class="nav_btn" id="moon"><i id="theme" class="fa-solid fa-moon fa-lg" style="color: #005eff;"></i>
+                </div>
+                <div class="nav_btn" id="sun"><i class="fa-solid fa-sun fa-lg" style="color: #005eff;"></i></div> -->
             </div>
         </div>
     </div>
