--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -1,32 +1,83 @@
+<div class="overlay">
+    <div class="overlay_main">
+        <form action="" method="post" class="overlay_form">
+            <label for="file-input" type="file" name="profile-image">
+                <img src="/images/image.jpg" class="overlay_image" />
+            </label>
+            <input id="file-input" type="file" class="" name="profile-image" class="profile_image" />
+            <input type=" text" name="username" class="home_form_input" value="Tom Jose">
+            <button class="home_form_btn">Update</button>
+        </form>
+    </div>
+</div>
 <div class="chat">
     <div class="chat_container">
         <div class="chat_users">
             <div class="chat_current_user">
                 <img src="/images/image.jpg" alt="current_user" class="chat_current_image">
-                <div class="chat_current_username">Tom Jose</div>
+                <div class="chat_current_username">Tom Jose <i class="fa-solid fa-check fa-sm"
+                        style="color: #007fff;"></i></div>
             </div>
             <div class="chat_searchbar">
                 <input type="text" name="user" class="chat_searchbar_input" placeholder="Search Friends..">
             </div>
-            <div class="chat_friend_list">
-                <img src="/images/image.jpg" alt="" class="chat_friend_image">
-                <div class="chat_friend_username">Tharesh Jose</div>
-                <div class="chat_friend_timestamp">12:00</div>
-            </div>
-            <div class="chat_friend_list">
-                <img src="/images/image.jpg" alt="" class="chat_friend_image">
-                <div class="chat_friend_username">Tharesh Jose</div>
-                <div class="chat_friend_add">+</div>
-            </div>
-            <div class="chat_friend_list">
-                <img src="/images/image.jpg" alt="" class="chat_friend_image">
-                <div class="chat_friend_username">Tharesh Jose</div>
-                <div class="chat_friend_timestamp">12:00</div>
-            </div>
-            <div class="chat_friend_list">
-                <img src="/images/image.jpg" alt="" class="chat_friend_image">
-                <div class="chat_friend_username">Tharesh Jose</div>
-                <div class="chat_friend_timestamp">12:00</div>
+            <div class="chat_friend">
+                <div class="chat_friend_list">
+                    <img src="/images/image.jpg" alt="" class="chat_friend_image">
+                    <div class="chat_friend_username">Tharesh Jose</div>
+                    <div class="chat_friend_timestamp">12:00</div>
+                </div>
+                <div class="chat_friend_list">
+                    <img src="/images/image.jpg" alt="" class="chat_friend_image">
+                    <div class="chat_friend_username">Tharesh Jose</div>
+                    <div class="chat_friend_add">+</div>
+                </div>
+                <div class="chat_friend_list">
+                    <img src="/images/image.jpg" alt="" class="chat_friend_image">
+                    <div class="chat_friend_username">Tharesh Jose</div>
+                    <div class="chat_friend_add">+</div>
+                </div>
+                <div class="chat_friend_list">
+                    <img src="/images/image.jpg" alt="" class="chat_friend_image">
+                    <div class="chat_friend_username">Tharesh Jose</div>
+                    <div class="chat_friend_add">+</div>
+                </div>
+                <div class="chat_friend_list">
+                    <img src="/images/image.jpg" alt="" class="chat_friend_image">
+                    <div class="chat_friend_username">Tharesh Jose</div>
+                    <div class="chat_friend_add">+</div>
+                </div>
+                <div class="chat_friend_list">
+                    <img src="/images/image.jpg" alt="" class="chat_friend_image">
+                    <div class="chat_friend_username">Tharesh Jose</div>
+                    <div class="chat_friend_add">+</div>
+                </div>
+                <div class="chat_friend_list">
+                    <img src="/images/image.jpg" alt="" class="chat_friend_image">
+                    <div class="chat_friend_username">Tharesh Jose</div>
+                    <div class="chat_friend_add">+</div>
+                </div>
+                <div class="chat_friend_list">
+                    <img src="/images/image.jpg" alt="" class="chat_friend_image">
+                    <div class="chat_friend_username">Tharesh Jose</div>
+                    <div class="chat_friend_add">+</div>
+                </div>
+                <div class="chat_friend_list">
+                    <img src="/images/image.jpg" alt="" class="chat_friend_image">
+                    <div class="chat_friend_username">Tharesh Jose</div>
+                    <div class="chat_friend_add">+</div>
+                </div>
+
+                <div class="chat_friend_list">
+                    <img src="/images/image.jpg" alt="" class="chat_friend_image">
+                    <div class="chat_friend_username">Tharesh Jose</div>
+                    <div class="chat_friend_timestamp">12:00</div>
+                </div>
+                <div class="chat_friend_list">
+                    <img src="/images/image.jpg" alt="" class="chat_friend_image">
+                    <div class="chat_friend_username">Tharesh Jose</div>
+                    <div class="chat_friend_timestamp">12:00</div>
+                </div>
             </div>
         </div>
         <div class="chat_box">
