--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,1 +1,23 @@
-<h1>Hello Tom </h1>
+<div class="home">
+    <div class="home_session">
+        <div class="home_signup">
+            <h1 class="home_title">ChatZip</h1>
+            <p class="home_description">ChatZip helps you connect and share with the people in your life.
+            </p>
+            <form action="" method="post" class="home_form">
+                <input type="email" name="" id="" class="home_form_input" placeholder="Email" required>
+                <input type="password" name="" id="" class="home_form_input" placeholder="Password" required>
+                <div class="home_form_button">
+                    <button type="submit" class="home_form_btn">Sign Up</button>
+                    <button type="submit" class="home_form_gbtn"><img
+                            src="https://seekicon.com/free-icon-download/google_4.svg" alt="google-icon"
+                            class="google-icon"> Sign In with
+                        Google</button>
+                </div>
+            </form>
+        </div>
+        <div class="home_messaging_image">
+            <img src="images/Messaging.gif" alt="messaging" class="home_image">
+        </div>
+    </div>
+</div>
