--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -8,9 +8,15 @@
     <title>
         <%=title %>
     </title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/header.css">
     <link rel="stylesheet" href="/css/chat.css">
+    <link rel="stylesheet" href="/css/home.css">
+    <link rel="stylesheet" href="/css/footer.css">
+    <link rel="stylesheet" href="/css/signup.css">
+    <script src="/js/overlay.js"></script>
+    <script src="/js/colorSchema.js"></script>
     <script src="https://kit.fontawesome.com/2a8c99c489.js" crossorigin="anonymous"></script>
 
 </head>
