--- a/assets/css/chat.css
+++ b/assets/css/chat.css
@@ -14,6 +14,11 @@
     margin: 0 0.5rem; }
   .chat_button:hover {
     background-color: #0370dd; }
+  .chat_box_main::-webkit-scrollbar {
+    width: 0.4rem; }
+  .chat_box_main::-webkit-scrollbar-thumb {
+    background-color: darkgray;
+    border-radius: 2rem; }
   .chat_box_main {
     width: 100%;
     height: 39.6rem;
@@ -58,42 +63,56 @@
     border: none; }
   .chat_box_input:focus {
     outline: none; }
-  .chat_friend_add {
-    margin-left: auto;
-    background-color: #007fff;
-    border: none;
-    color: #ffffff;
-    padding: 0.8rem;
-    border-radius: 0.6rem;
-    cursor: pointer;
-    font-weight: 500; }
-  .chat_friend_list {
+  .chat_friend::-webkit-scrollbar {
+    width: 0.4rem; }
+  .chat_friend::-webkit-scrollbar-thumb {
+    background-color: darkgray;
+    border-radius: 2rem; }
+  .chat_friend {
     display: flex;
-    padding: 1rem;
-    align-items: center;
-    padding: 1.4rem 1rem;
-    border-bottom: 0.1rem solid #e7ebf0;
-    cursor: pointer; }
-  .chat_friend_list:hover {
-    background-color: #e7ebf0; }
-  .chat_friend_image {
-    width: 2rem;
-    border-radius: 100%; }
-  .chat_friend_username {
-    padding: 0 0.5rem; }
-  .chat_friend_timestamp {
-    margin-left: auto;
-    color: #cbcbcb; }
+    flex-direction: column;
+    overflow: auto;
+    height: 480px; }
+    .chat_friend_add {
+      margin-left: auto;
+      background-color: #007fff;
+      border: none;
+      color: #ffffff;
+      padding: 0.8rem;
+      border-radius: 0.6rem;
+      cursor: pointer;
+      font-weight: 500; }
+    .chat_friend_list {
+      display: flex;
+      padding: 1rem;
+      align-items: center;
+      padding: 1.4rem 1rem;
+      border-bottom: 0.1rem solid #e7ebf0;
+      cursor: pointer; }
+    .chat_friend_list:hover {
+      background-color: #e7ebf0; }
+    .chat_friend_image {
+      width: 2rem;
+      border-radius: 100%; }
+    .chat_friend_username {
+      padding: 0 0.5rem; }
+    .chat_friend_timestamp {
+      margin-left: auto;
+      color: #cbcbcb; }
   .chat_current_user {
+    cursor: pointer;
     background-color: #f1f4f7;
     width: 100%;
     padding: 1rem;
     display: flex;
     align-items: center; }
   .chat_current_username {
-    font-size: bold;
+    font-weight: 700;
+    font-size: 1.2rem;
     padding: 0 0.5rem;
-    color: #007fff; }
+    color: #000000;
+    display: flex;
+    align-items: center; }
   .chat_current_image {
     width: 2rem;
     border-radius: 100%; }
@@ -113,6 +132,7 @@
       outline: none; }
   .chat_container {
     width: 70%;
+    height: 600px;
     background-color: white;
     border: 0.1rem solid #e7ebf0;
     border-radius: 1rem;
@@ -127,4 +147,8 @@
       width: 100%;
       background-color: #f1f4f7; }
     .chat_box_main {
-      width: 100%; }
+      width: 100%;
+      height: 470px; }
+
+.fa-check {
+  padding-left: 0.4rem; }
