--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -26,7 +26,8 @@
   padding: 1rem 2rem;
   display: flex;
   align-items: center;
-  justify-content: center; }
+  justify-content: center;
+  border-bottom: 0.1rem solid #dddfe2; }
 
 .nav_brand {
   font-size: 1.4rem;
