--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,3 +6,46 @@
   text-decoration: none;
   font-size: 14px;
   font-family: "Roboto", sans-serif; }
+
+body {
+  background-color: #f1f4f7; }
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: none;
+  justify-content: center;
+  align-items: center; }
+  .overlay_main {
+    z-index: 3;
+    background-color: #ffffff;
+    border-radius: 0.6rem;
+    position: fixed;
+    top: 30%;
+    left: 50%;
+    transform: translateX(-50%); }
+  .overlay_form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 2rem; }
+  .overlay_image {
+    width: 10rem;
+    border-radius: 100%; }
+
+.fa-circle-xmark {
+  align-self: flex-end; }
+
+.display {
+  display: fle; }
+
+#sun {
+  display: none; }
+
+@media screen and (max-width: 900px) {
+  * {
+    font-size: 12px; } }
