--- a/assets/scss/chat.scss
+++ b/assets/scss/chat.scss
@@ -26,6 +26,14 @@ $chat-color: #000000;
     background-color: $main-color-hover;
   }
   &_box {
+    &_main::-webkit-scrollbar {
+      width: 0.4rem;
+    }
+
+    &_main::-webkit-scrollbar-thumb {
+      background-color: rgb(169, 169, 169);
+      border-radius: 2rem;
+    }
     &_main {
       width: 100%;
       height: 39.6rem;
@@ -81,7 +89,19 @@ $chat-color: #000000;
       outline: none;
     }
   }
+  &_friend::-webkit-scrollbar {
+    width: 0.4rem;
+  }
+
+  &_friend::-webkit-scrollbar-thumb {
+    background-color: rgb(169, 169, 169);
+    border-radius: 2rem;
+  }
   &_friend {
+    display: flex;
+    flex-direction: column;
+    overflow: auto;
+    height: 480px;
     &_add {
       margin-left: auto;
       background-color: $main-color;
@@ -117,6 +137,7 @@ $chat-color: #000000;
   }
   &_current {
     &_user {
+      cursor: pointer;
       background-color: $main-bg;
       width: 100%;
       padding: 1rem;
@@ -124,9 +145,12 @@ $chat-color: #000000;
       align-items: center;
     }
     &_username {
-      font-size: bold;
+      font-weight: 700;
+      font-size: 1.2rem;
       padding: 0 0.5rem;
-      color: $main-color;
+      color: $chat-color;
+      display: flex;
+      align-items: center;
     }
     &_image {
       width: 2rem;
@@ -152,6 +176,7 @@ $chat-color: #000000;
   }
   &_container {
     width: 70%;
+    height: 600px;
     background-color: $chat-main-bg;
     border: 0.1rem solid $chat-border;
     border-radius: 1rem;
@@ -162,6 +187,7 @@ $chat-color: #000000;
     width: 30%;
     border-right: 0.1rem solid $chat-border;
   }
+
   &_box {
     width: 70%;
     &_header {
@@ -170,6 +196,10 @@ $chat-color: #000000;
     }
     &_main {
       width: 100%;
+      height: 470px;
     }
   }
+}
+.fa-check {
+  padding-left: 0.4rem;
 }
