--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;1,300&display=swap");
 $main-bg: #f1f4f7;
+$overlay-bg: #ffffff;
 * {
   padding: 0px;
   margin: 0px;
@@ -7,4 +8,56 @@ $main-bg: #f1f4f7;
   text-decoration: none;
   font-size: 14px;
   font-family: "Roboto", sans-serif;
+}
+body {
+  background-color: #f1f4f7;
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+
+  display: none;
+  justify-content: center;
+  align-items: center;
+  &_main {
+    z-index: 3;
+
+    background-color: $overlay-bg;
+    border-radius: 0.6rem;
+    position: fixed;
+    top: 30%;
+    left: 50%;
+    // transform: translateY(-50%);
+    transform: translateX(-50%);
+  }
+  &_form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 2rem;
+  }
+  &_image {
+    width: 10rem;
+    border-radius: 100%;
+  }
+}
+.fa-circle-xmark {
+  align-self: flex-end;
+}
+.display {
+  display: fle;
+}
+#sun {
+  display: none;
+}
+
+@media screen and(max-width: 900px) {
+  * {
+    font-size: 12px;
+  }
 }
