--- a/assets/css/signup.css
+++ b/assets/css/signup.css
@@ -5,6 +5,8 @@
   align-items: center; }
   .signup_form {
     width: 40%; }
+  .signup_google {
+    width: 97%; }
 
 @media screen and (max-width: 900px) {
   .signup_form {
