--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,6 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;1,300&display=swap");
 $main-bg: #f1f4f7;
 $overlay-bg: #ffffff;
+$verification-text: #d32f2f;
+$verification-link: #2e7d32;
 * {
   padding: 0px;
   margin: 0px;
@@ -12,7 +14,24 @@ $overlay-bg: #ffffff;
 body {
   background-color: #f1f4f7;
 }
-
+.verification {
+  width: 70%;
+  margin: 1rem 0;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: transparent;
+  color: $verification-text;
+  border-radius: 0.4rem;
+  border: 0.1rem solid $verification-text;
+  align-self: center;
+  &_text {
+    text-align: center;
+    padding: 2rem;
+  }
+  &_link {
+    color: $verification-link;
+  }
+}
 .overlay {
   position: fixed;
   top: 0;
