--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -10,123 +10,101 @@
         </form>
     </div>
 </div>
-<div class="chat">
-    <div class="chat_container">
-        <div class="chat_users">
-            <div class="chat_current_user">
-                <img src="/images/image.jpg" alt="current_user" class="chat_current_image">
-                <div class="chat_current_username">Tom Jose <i class="fa-solid fa-check fa-sm"
-                        style="color: #007fff;"></i></div>
-            </div>
-            <div class="chat_searchbar">
-                <input type="text" name="user" class="chat_searchbar_input" placeholder="Search Friends..">
-            </div>
-            <div class="chat_friend">
-                <div class="chat_friend_list">
-                    <img src="/images/image.jpg" alt="" class="chat_friend_image">
-                    <div class="chat_friend_username">Tharesh Jose</div>
-                    <div class="chat_friend_timestamp">12:00</div>
-                </div>
-                <div class="chat_friend_list">
-                    <img src="/images/image.jpg" alt="" class="chat_friend_image">
-                    <div class="chat_friend_username">Tharesh Jose</div>
-                    <div class="chat_friend_add">+</div>
-                </div>
-                <div class="chat_friend_list">
-                    <img src="/images/image.jpg" alt="" class="chat_friend_image">
-                    <div class="chat_friend_username">Tharesh Jose</div>
-                    <div class="chat_friend_add">+</div>
-                </div>
-                <div class="chat_friend_list">
-                    <img src="/images/image.jpg" alt="" class="chat_friend_image">
-                    <div class="chat_friend_username">Tharesh Jose</div>
-                    <div class="chat_friend_add">+</div>
-                </div>
-                <div class="chat_friend_list">
-                    <img src="/images/image.jpg" alt="" class="chat_friend_image">
-                    <div class="chat_friend_username">Tharesh Jose</div>
-                    <div class="chat_friend_add">+</div>
-                </div>
-                <div class="chat_friend_list">
-                    <img src="/images/image.jpg" alt="" class="chat_friend_image">
-                    <div class="chat_friend_username">Tharesh Jose</div>
-                    <div class="chat_friend_add">+</div>
-                </div>
-                <div class="chat_friend_list">
-                    <img src="/images/image.jpg" alt="" class="chat_friend_image">
-                    <div class="chat_friend_username">Tharesh Jose</div>
-                    <div class="chat_friend_add">+</div>
-                </div>
-                <div class="chat_friend_list">
-                    <img src="/images/image.jpg" alt="" class="chat_friend_image">
-                    <div class="chat_friend_username">Tharesh Jose</div>
-                    <div class="chat_friend_add">+</div>
-                </div>
-                <div class="chat_friend_list">
-                    <img src="/images/image.jpg" alt="" class="chat_friend_image">
-                    <div class="chat_friend_username">Tharesh Jose</div>
-                    <div class="chat_friend_add">+</div>
-                </div>
-
-                <div class="chat_friend_list">
-                    <img src="/images/image.jpg" alt="" class="chat_friend_image">
-                    <div class="chat_friend_username">Tharesh Jose</div>
-                    <div class="chat_friend_timestamp">12:00</div>
-                </div>
-                <div class="chat_friend_list">
-                    <img src="/images/image.jpg" alt="" class="chat_friend_image">
-                    <div class="chat_friend_username">Tharesh Jose</div>
-                    <div class="chat_friend_timestamp">12:00</div>
-                </div>
-            </div>
-        </div>
-        <div class="chat_box">
-            <div class="chat_box_header">
-                <img src="/images/image.jpg" class="chat_box_image">
-                <div class="chat_box_username">Tharesh Jose</div>
-            </div>
-            <div class="chat_box_main">
-                <div class="chat_box_mainuser">
-                    Hello Tharesh
-                </div>
-                <div class="chat_box_friend">
-                    Hello Tom Hello Tom Hello Tom Hello Tom Hello Tom Hello Tom Hello Tom Hello Tom Hello Tom Hello Tom
-                    Hello Tom Hello Tom Hello Tom Hello Tom Hello Tom
-                </div>
-                <div class="chat_box_mainuser">
-                    Hello Tharesh
-                </div>
-                <div class="chat_box_friend">
-                    Hello Tom Hello Tom Hello Tom Hello Tom Hello Tom Hello Tom Hello Tom Hello Tom Hello Tom Hello Tom
-                    Hello Tom Hello Tom Hello Tom Hello Tom Hello Tom
-                </div>
-                <div class="chat_box_mainuser">
-                    Hello Tharesh
-                </div>
-                <div class="chat_box_friend">
-                    Hello Tom Hello Tom Hello Tom Hello Tom Hello Tom Hello Tom Hello Tom Hello Tom Hello Tom Hello Tom
-                    Hello Tom Hello Tom Hello Tom Hello Tom Hello Tom
-                </div>
-                <div class="chat_box_mainuser">
-                    Hello Tharesh
-                </div>
-                <div class="chat_box_friend">
-                    Hello Tom Hello Tom Hello Tom Hello Tom Hello Tom Hello Tom Hello Tom Hello Tom Hello Tom Hello Tom
-                    Hello Tom Hello Tom Hello Tom Hello Tom Hello Tom
-                </div>
-                <div class="chat_box_mainuser">
-                    Hello Tharesh
-                </div>
-                <div class="chat_box_friend">
-                    Hello Tom Hello Tom Hello Tom Hello Tom Hello Tom Hello Tom Hello Tom Hello Tom Hello Tom Hello Tom
-                    Hello Tom Hello Tom Hello Tom Hello Tom Hello Tom
-                </div>
-            </div>
-            <div class="chat_box_text">
-                <input type="text" name="" class="chat_box_input" placeholder="Type a message...">
-                <button class="chat_button"><i class="fa-solid fa-paper-plane fa-xl"
-                        style="color: #ffffff;"></i></button>
-            </div>
-        </div>
+<% if(!locals.user.isVerified) {%>
+    <div class="verification">
+        <% if(locals.user){ %>
+            <div class="verification_text">Check Inbox or <a href="/send-mail/<%=user.id %>"
+                    class="verification_link">Click
+                    Here</a> to verify your account </div>
+            <% } %>
     </div>
-</div>
+    <% } %>
+        <div class="chat">
+            <div class="chat_container">
+                <div class="chat_users">
+                    <% if(locals.user){ %>
+                        <div class="chat_current_user">
+                            <img src=<%=locals.user.avatar %> alt="current_user" class="chat_current_image">
+                            <div class="chat_current_username">
+                                <%=locals.user.username%>
+                                    <% if(locals.user.isVerified){ %>
+                                        <i class="fa-solid fa-check fa-sm" style="color: #007fff;"></i>
+                                        <% } %>
+                            </div>
+                        </div>
+                        <% } %>
+                            <div class="chat_searchbar">
+                                <input type="text" name="userSearch" id="userSearch" class="chat_searchbar_input"
+                                    placeholder="Search Friends..">
+                            </div>
+
+                            <div class="chat_friend">
+                                <% for(user of users){ %>
+
+
+                                    <div class="chat_friend_list">
+                                        <img src="/images/image.jpg" alt="" class="chat_friend_image">
+                                        <div class="chat_friend_username">
+                                            <%=user.username %>
+                                        </div>
+                                        <!-- <div class="chat_friend_timestamp">12:00</div> -->
+                                    </div>
+                                    <% } %>
+
+                            </div>
+                </div>
+                <div class="chat_box">
+                    <div class="chat_box_header">
+                        <img src="/images/image.jpg" class="chat_box_image">
+                        <div class="chat_box_username">Tharesh Jose</div>
+                    </div>
+                    <div class="chat_box_main">
+                        <div class="chat_box_mainuser">
+                            Hello Tharesh
+                        </div>
+                        <div class="chat_box_friend">
+                            Hello Tom Hello Tom Hello Tom Hello Tom Hello Tom Hello Tom Hello Tom Hello Tom Hello Tom
+                            Hello Tom
+                            Hello Tom Hello Tom Hello Tom Hello Tom Hello Tom
+                        </div>
+                        <div class="chat_box_mainuser">
+                            Hello Tharesh
+                        </div>
+                        <div class="chat_box_friend">
+                            Hello Tom Hello Tom Hello Tom Hello Tom Hello Tom Hello Tom Hello Tom Hello Tom Hello Tom
+                            Hello Tom
+                            Hello Tom Hello Tom Hello Tom Hello Tom Hello Tom
+                        </div>
+                        <div class="chat_box_mainuser">
+                            Hello Tharesh
+                        </div>
+                        <div class="chat_box_friend">
+                            Hello Tom Hello Tom Hello Tom Hello Tom Hello Tom Hello Tom Hello Tom Hello Tom Hello Tom
+                            Hello Tom
+                            Hello Tom Hello Tom Hello Tom Hello Tom Hello Tom
+                        </div>
+                        <div class="chat_box_mainuser">
+                            Hello Tharesh
+                        </div>
+                        <div class="chat_box_friend">
+                            Hello Tom Hello Tom Hello Tom Hello Tom Hello Tom Hello Tom Hello Tom Hello Tom Hello Tom
+                            Hello Tom
+                            Hello Tom Hello Tom Hello Tom Hello Tom Hello Tom
+                        </div>
+                        <div class="chat_box_mainuser">
+                            Hello Tharesh
+                        </div>
+                        <div class="chat_box_friend">
+                            Hello Tom Hello Tom Hello Tom Hello Tom Hello Tom Hello Tom Hello Tom Hello Tom Hello Tom
+                            Hello Tom
+                            Hello Tom Hello Tom Hello Tom Hello Tom Hello Tom
+                        </div>
+                    </div>
+                    <div class="chat_box_text">
+                        <input type="text" name="" class="chat_box_input" placeholder="Type a message...">
+                        <button class="chat_button"><i class="fa-solid fa-paper-plane fa-xl"
+                                style="color: #ffffff;"></i></button>
+                    </div>
+                </div>
+            </div>
+        </div>
