--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="/css/signup.css">
     <script src="/js/overlay.js"></script>
     <script src="/js/colorSchema.js"></script>
+    <script src="/js/searchUser.js"></script>
     <script src="https://kit.fontawesome.com/2a8c99c489.js" crossorigin="anonymous"></script>
 
 </head>
