--- a/views/sign-up.ejs
+++ b/views/sign-up.ejs
@@ -1,14 +1,19 @@
 <div class="signup">
-    <form action="" method="post" class="home_form signup_form">
-        <input type="text" name="name" id="" class="home_form_input" placeholder="username">
-        <input type="email" name="email" id="" class="home_form_input" placeholder="Email">
-        <input type="password" name="password" id="" class="home_form_input" placeholder=" Password">
-        <input type="password" name="confirmPassword" id="" class="home_form_input" placeholder="Confirm Password">
-        <div class="home_form_button">
-            <button type="submit" class="home_form_btn">Sign In</button>
-            <button type="submit" class="home_form_gbtn"><img src="https://seekicon.com/free-icon-download/google_4.svg"
-                    alt="google-icon" class="google-icon"> Sign In with
-                Google</button>
-        </div>
-    </form>
+    <div class="home_form signup_form">
+        <form action="/create" method="POST">
+            <input type="text" name="username" class="home_form_input" placeholder="username">
+            <input type="email" name="email" class="home_form_input" placeholder="Email">
+            <input type="password" name="password" class="home_form_input" placeholder=" Password">
+            <input type="password" name="confirmPassword" class="home_form_input" placeholder="Confirm Password">
+            <input type="hidden" name="isVerified" value="false">
+            <input type="hidden" name="avatar" value="/images/image.jpg">
+
+            <button type="submit" class="home_form_btn">Sign Up</button>
+        </form>
+        <hr class="home_hr">
+        <a href="/auth/google" class="signup_google"> <button class="home_form_gbtn"><img
+                    src="https://seekicon.com/free-icon-download/google_4.svg" alt="google-icon" class="google-icon">
+                Sign In with
+                Google</button></a>
+    </div>
 </div>
