--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -26,7 +26,11 @@
     <%- include("_header.ejs"); %>
         <%- body%>
             <%- include("_footer.ejs"); %>
+                <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"></script>
+                <script src="/js/chatEngine.js"></script>
+                <script>
 
+                </script> -->
 </body>
 
 </html>
