--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,16 +15,15 @@ body {
   margin: 1rem 0;
   margin-left: auto;
   margin-right: auto;
-  background-color: transparent;
-  color: #d32f2f;
+  background-color: rgba(252, 215, 7, 0.4);
+  color: #fcd707;
   border-radius: 0.4rem;
-  border: 0.1rem solid #d32f2f;
+  border: 0.1rem solid #fcd707;
   align-self: center; }
   .verification_text {
     text-align: center;
-    padding: 2rem; }
-  .verification_link {
-    color: #2e7d32; }
+    padding: 2rem;
+    color: black; }
 
 .overlay {
   position: fixed;
