--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,8 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;1,300&display=swap");
 $main-bg: #f1f4f7;
 $overlay-bg: #ffffff;
-$verification-text: #d32f2f;
-$verification-link: #2e7d32;
+$verification-text: #fcd707;
+$verification-bg: rgba(252, 215, 7, 0.4);
 * {
   padding: 0px;
   margin: 0px;
@@ -19,7 +19,7 @@ body {
   margin: 1rem 0;
   margin-left: auto;
   margin-right: auto;
-  background-color: transparent;
+  background-color: $verification-bg;
   color: $verification-text;
   border-radius: 0.4rem;
   border: 0.1rem solid $verification-text;
@@ -27,9 +27,7 @@ body {
   &_text {
     text-align: center;
     padding: 2rem;
-  }
-  &_link {
-    color: $verification-link;
+    color: black;
   }
 }
 .overlay {
