--- a/assets/scss/chat.scss
+++ b/assets/scss/chat.scss
@@ -12,6 +12,7 @@ $chat-color: #000000;
   background-color: $main-bg;
   display: flex;
   justify-content: center;
+
   &_button {
     background-color: $main-color;
     border: none;
@@ -42,12 +43,14 @@ $chat-color: #000000;
       flex-direction: column;
     }
     &_friend {
-      margin: 1rem;
+      margin: 0 1rem;
       padding: 1rem;
       background-color: $main-bg;
       color: $chat-color;
       border-radius: 1rem;
       width: 50%;
+      display: flex;
+      flex-direction: column;
     }
 
     &_mainuser {
@@ -189,6 +192,21 @@ $chat-color: #000000;
   }
 
   &_box {
+    &_container {
+      padding: 0.4rem;
+      align-items: flex-start;
+      display: flex;
+    }
+    &_chatuser {
+      color: $main-color;
+      font-weight: 400;
+      padding: 0 0 0.6rem 0;
+    }
+    &_chatimg {
+      border-radius: 100%;
+      width: 1.4rem;
+      height: 1.4rem;
+    }
     width: 70%;
     &_header {
       width: 100%;
