--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -26,11 +26,16 @@
     <%- include("_header.ejs"); %>
         <%- body%>
             <%- include("_footer.ejs"); %>
-                <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"></script>
+                <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"></script>
                 <script src="/js/chatEngine.js"></script>
-                <script>
+                <% if(locals.user){ %>
+                    <script>
 
-                </script> -->
+
+
+                        new ChatEngine("chat_box_main", "<%=locals.user.email %>", "<%=locals.user.avatar.replace(/\\/g, `/`) %>", "<%=locals.user.username %>")
+                    </script>
+                    <% } %>
 </body>
 
 </html>
