--- a/assets/css/chat.css
+++ b/assets/css/chat.css
@@ -97,7 +97,8 @@
       width: 2rem;
       border-radius: 100%; }
     .chat_friend_username {
-      padding: 0 0.5rem; }
+      padding: 0 0.5rem;
+      display: flex; }
     .chat_friend_timestamp {
       margin-left: auto;
       color: #cbcbcb; }
@@ -162,7 +163,10 @@
       background-color: #f1f4f7; }
     .chat_box_main {
       width: 100%;
-      height: 470px; }
+      height: 475px; }
 
 .fa-check {
   padding-left: 0.4rem; }
+
+.noDisplay {
+  display: none; }
