--- a/assets/scss/chat.scss
+++ b/assets/scss/chat.scss
@@ -132,6 +132,7 @@ $chat-color: #000000;
     }
     &_username {
       padding: 0 0.5rem;
+      display: flex;
     }
     &_timestamp {
       margin-left: auto;
@@ -214,10 +215,13 @@ $chat-color: #000000;
     }
     &_main {
       width: 100%;
-      height: 470px;
+      height: 475px;
     }
   }
 }
 .fa-check {
   padding-left: 0.4rem;
+}
+.noDisplay {
+  display: none;
 }
