--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -58,7 +58,7 @@
                     <div class="chat_box_header">
                         <img src="<%=locals.user.avatar%>" class="chat_box_image">
                         <div class="chat_box_username">
-                            <%=locals.user.email%>
+                            <%=locals.user.username%>
                         </div>
                     </div>
                     <div class="chat_box_main" id="chat_box_main">
