--- a/views/mailers/verification/verified.ejs
+++ b/views/mailers/verification/verified.ejs
@@ -2,6 +2,6 @@
     <h1 style="color: #007fff;font-weight: 600; font-size: 32px;">ChatZip</h1>
     <h2>Click to verify account</h2>
 
-    <a href="http://localhost:8000/verified/<%=locals.user.id  %>"><button
+    <a href="https://chat-engine-app-backend-nodejs.onrender.com/verified/<%=locals.user.id  %>"><button
             style="background-color:#007fff;color: white;padding: 16px;border-radius: 4px;border: none;font-weight: 400;">verify</button></a>
 </div>
